--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,3 +14,5 @@ body {
   color: #fff;
   background-color: #000;
 }
+
+.btn-google{color:#fff;background-color:#dd4b39;border-color:rgba(0,0,0,0.2)}.btn-google:focus,.btn-google.focus{color:#fff;background-color:#c23321;border-color:rgba(0,0,0,0.2)}
